tests/e2e/semantics/object_index_int2.error
Error: syntax error in story at line 2, column 1

2|    a[0] = false
      ^

E0104: `map[string,boolean]` can't be indexed with `int`
