tests/e2e/semantics/object_index_int2.story
a = {"a": true}
a[0] = false
